<resources>
    <string name="app_name">SmartParkVol2</string>
    <string name="registeruser"><u>Don\'t have an account yet \?</u></string>
    <string name="bookpark"><i>Please note that selecting a Valet Parking option will redirect you to the drop off zone</i></string>
    <string name="welcomemsg"><i>Welcome to SmartPark!</i></string>
    <string name="bookhistory"><i>Please tap on a booking to view details</i></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main4">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_home1">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_chatsupport">Chat support</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_verifyuser">Verify User</string>
    <string name="title_verifyVIPuser">Verify Vip User</string>
    <string name="title_parking">Parking</string>
    <string name="map">map</string>
    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="menu_refresh">Refresh</string>
    <string name="carwash"> carwash </string>
    <string name="carlocation">carlocation</string>
    <string name="userprofile">userprofile</string>
    <string name="vipbook">vipbook</string>
    <string name="exisitingvipbook">existingvipbook</string>
    <string name="bookinghistory">bookinghistory</string>
    <string name="bookingdetails">bookingdetails</string>
    <string name="receipts">receipts</string>
    <string-array name="zone_array">
        <item>Zone A</item>
        <item>Zone B</item>
        <item>Valet</item>
    </string-array>
    <string-array name="VIP_array">
        <item>VIP zone</item>
    </string-array>
    <string-array name="locations">
        <item>UOWD</item>
        <item>Heriott Watt</item>
    </string-array>
    <string-array name="time">
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:30</item>
    </string-array>
    <string name="title_activity_main5">MainActivity</string>
    <string name="CarRequest" />
    <string name="Information">Information</string>
    <string name="informationUpdate">Information</string>
    <string name="Myvehicles">Myvehicles</string>
    <string name="msg_token_fmt" />
    <string name="title_activity_dashboard2">MainActivity</string>
    <string name="title_userprofile">Profile</string>
</resources>
